--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.29.4",
     "node-fetch": "^3.3.0",
     "nodemon": "^2.0.20",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
